<resources>
    <string name="app_name">Kotlin MVP</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="kotlin_splash_title">Kotlin</string>
    <string name="mvp_subtitle_text">M V P</string>
    <string name="developed_by_text">Developed by\nJosé Grillo</string>

    <string name="login_title_text">Login</string>

    <string name="register_title_text">Register</string>
    <string name="button_register_text">Sign Up</string>
    <string name="form_email_text">Email</string>
    <string name="form_password_text">Password</string>
    <string name="form_confirm_password_text">Confirm Password</string>
    <string name="button_login_text">Sign In</string>
    <string name="kotlin_list_title">Kotlin Elements</string>
    <string name="kotlin_detail_title">Article Detail</string>

    <string name="loading_login_text">Signing in</string>
    <string name="loading_register_text">Signing up</string>
    <string name="loading_articles_text">Getting articles</string>

    <string name="close_session_cancel_text">Cancel</string>
    <string name="close_session_confirm_text">Confirm</string>
    <string name="close_session_body_text">Do you want to close your session?</string>

    <string name="empty_inputs_message">Inputs cannot be empty</string>
    <string name="email_error_format_message">Invalid format</string>
    <string name="password_error_format_message">Must have more than 4 characters</string>
    <string name="password_missmatch_error_message">Check password and confirm password</string>
    <string name="unavailable_error_message">There has been a comunication error, please try again</string>
    <string name="unexpected_error_message">There has been an unexpected error, please try again</string>

    <string name="gitlab_code_text">Gitlab</string>
    <string name="rate_app_text">Rate us</string>
    <string name="close_session_text">Close Session</string>

    <string name="gitlab_url_repository">https://gitlab.com/grillo87/kotlin_mvp</string>
    <string name="google_play_url">https://play.google.com/store/apps/details?id=com.josegrillo.kotlinmvp</string>
    <string name="google_play_deep_linking">market://details?id=com.josegrillo.kotlinmvp</string>

    <string name="activity_list_banner_unitid">ca-app-pub-9058872120522121/4564585646</string>
    <string name="activity_detail_banner_unitid">ca-app-pub-9058872120522121/8113357539</string>

</resources>
